# BioFF

./: .gitignore  LICENSE  README.md  __init__.py  classifier.py  core.py  pipeline.py  pyproject.toml
.github/workflows/: python-publish.yml
BioFF/: classifier.py  preprocess.py
bioff/: __init__.py  classifier.py  core.py  pipeline.py  preprocess.py
