[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BioFF"
version = "0.1.3"
authors = [
  { name = "smallwhite", email = "180044072@qq.com" }
]
description = "基于Forward-Forward算法的生物信息学分类工具（适配基因/蛋白质表达数据）"
readme = "README.md"
license = "MIT"
keywords = [
  "bioinformatics",
  "Forward-Forward",
  "classification",
  "gene expression",
  "protein expression",
  "pytorch"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
  "torch >= 1.10.0",
  "numpy >= 1.21.0",
  "scikit-learn >= 1.0.0",
  "tqdm >= 4.64.0"
]

[project.urls]
Homepage = "https://github.com/smallWhite-0124/BioFF"
Bug_Tracker = "https://github.com/smallWhite-0124/BioFF/issues"
